--- a/pages/preys.html
+++ b/pages/preys.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Choose</title>
+    <title>The prey choose</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="/pages/style.css">
 </head>
@@ -11,14 +11,14 @@
 
 <nav class="navbar bg-body-tertiary rounded w-75 mx-auto">
   <div class="container-fluid ">
-    <a class="navbar-brand mx-auto fs-1 font-family-impact" href="#">ESCOLHA SEU PREDADOR</a>
+    <a class="navbar-brand mx-auto fs-1 font-family-impact" href="#">ESCOLHA SUA PRESA</a>
   </div>
 </nav>
 <br>
 
 <article>
     <div class="container w-75 rounded d-flex align-items-center" id="info">
-        <h3>"Na encruzilhada do horizonte, o predador encara sua decisão vital, ecoando a essência do caçador enquanto a natureza observa. Para garantir o desfecho, é preciso abandonar o passado e abraçar o futuro com sabedoria, pois a <u>sobrevivência do predador se entrelaça à presa</u> na teia do destino.</h3>
+        <h3>Na busca pela vantagem, <u>as presas estão entrelaçadas com os predadores</u>, cada movimento uma estratégia para manter a liderança e resistir à captura.</h3>
     </div>
 </article>
 <br>
@@ -27,57 +27,57 @@
     <form class="container w-75 d-flex flex-wrap justify-content-between" id="cardForm" action="seu_arquivo_de_envio.php"
         method="POST">
         <div class="card m-2" style="width: 18rem;" onclick="selectCard(this)">
-            <img src="/pages/img/secretlion.png" class="card-img-top" alt="...">
+            <img src="/pages/img/secretelephant.png" class="card-img-top" alt="...">
             <div class="card-body text-center">
-                <p class="card-text">O Leão</p>
+                <p class="card-text">O Elefante</p>
             </div>
         </div>
         <div class="card m-2" style="width: 18rem;" onclick="selectCard(this)">
-            <img src="pages/img/secretwolf.png" class="card-img-top" alt="...">
+            <img src="/pages/img/secretram.jpeg" class="card-img-top" alt="...">
             <div class="card-body text-center">
-                <p class="card-text">O Lobo</p>
+                <p class="card-text">O Carneiro</p>
             </div>
         </div>
         <div class="card m-2" style="width: 18rem;" onclick="selectCard(this)">
-            <img src="pages/img/secretbear.jpeg" class="card-img-top" alt="...">
+            <img src="/pages/img/secretdeer.jpeg" class="card-img-top" alt="...">
             <div class="card-body text-center">
-                <p class="card-text">O Urso</p>
+                <p class="card-text">O Cervo</p>
             </div>
         </div>
         <div class="card m-2" style="width: 18rem;" onclick="selectCard(this)">
-            <img src="pages/img/secretpume.jpeg" class="card-img-top" alt="...">
+            <img src="/pages/img/secretmouse.jpeg" class="card-img-top" alt="...">
             <div class="card-body text-center">
-                <p class="card-text">O Puma</p>
+                <p class="card-text">O Rato</p>
             </div>
         </div>
         <div class="card m-2" style="width: 18rem;" onclick="selectCard(this)">
-            <img src="pages/img/secretsecretary.jpeg" class="card-img-top" alt="...">
+            <img src="/pages/img/secretgrasshopper.jpeg" class="card-img-top" alt="...">
             <div class="card-body text-center">
-                <p class="card-text">O Secretário</p>
+                <p class="card-text">O Gafanhoto</p>
             </div>
         </div>
         <div class="card m-2" style="width: 18rem;" onclick="selectCard(this)">
-            <img src="pages/img/secretleopard.jpeg" class="card-img-top" alt="...">
+            <img src="/pages/img/secretboar.jpeg" class="card-img-top" alt="...">
             <div class="card-body text-center">
-                <p class="card-text">O Leopardo</p>
+                <p class="card-text">O Javali</p>
             </div>
         </div>
         <div class="card m-2" style="width: 18rem;" onclick="selectCard(this)">
-            <img src="pages/img/secretcheetah.jpeg" class="card-img-top" alt="...">
+            <img src="/pages/img/secretgazelle.jpeg" class="card-img-top" alt="...">
             <div class="card-body text-center">
-                <p class="card-text">O Guepardo</p>
+                <p class="card-text">A Gazela</p>
             </div>
         </div>
         <div class="card m-2" style="width: 18rem;" onclick="selectCard(this)">
-            <img src="pages/img/secretseal.jpeg" class="card-img-top" alt="...">
+            <img src="/pages/img/secretpenguin.jpeg" class="card-img-top" alt="...">
             <div class="card-body text-center">
-                <p class="card-text">A Foca</p>
+                <p class="card-text">O Pinguim</p>
             </div>
         </div>
         <div class="card m-2" style="width: 18rem;" onclick="selectCard(this)">
-            <img src="pages/img/secretfox.jpeg" class="card-img-top" alt="...">
+            <img src="/pages/img/secretrabbit.jpeg" class="card-img-top" alt="...">
             <div class="card-body text-center">
-                <p class="card-text">A Raposa</p>
+                <p class="card-text">O Coelho</p>
             </div>
         </div>
     </form>
